mem_dbg/tests/snapshots/test_all_types_mem_dbg_insta__empty_depth_0@x86.snap
---
source: mem_dbg/tests/test_all_types_mem_dbg_insta.rs
assertion_line: 70
expression: depth_output
---
42635 B ⏺
