mem_dbg/tests/snapshots/test_all_types_mem_dbg_insta__empty_depth_1@aarch64-darwin.snap
---
source: mem_dbg/tests/test_all_types_mem_dbg_insta.rs
expression: depth_output
---
64143 B ⏺
    0 B ├╴unit
    1 B ├╴boolean
    4 B ├╴character
    4 B ├╴f32_val
    8 B ├╴f64_val
    1 B ├╴u8_val
    2 B ├╴u16_val
    4 B ├╴u32_val
    8 B ├╴u64_val
   16 B ├╴u128_val
    8 B ├╴usize_val
    1 B ├╴i8_val
    2 B ├╴i16_val
    4 B ├╴i32_val
    8 B ├╴i64_val
   16 B ├╴i128_val
    8 B ├╴isize_val
    1 B ├╴atomic_bool
    1 B ├╴atomic_i8
    2 B ├╴atomic_i16
    4 B ├╴atomic_i32
    8 B ├╴atomic_i64
    8 B ├╴atomic_isize
    1 B ├╴atomic_u8
    2 B ├╴atomic_u16
    4 B ├╴atomic_u32
    8 B ├╴atomic_u64
    8 B ├╴atomic_usize
    1 B ├╴nz_i8
    2 B ├╴nz_i16
    4 B ├╴nz_i32
    8 B ├╴nz_i64
   16 B ├╴nz_i128
    8 B ├╴nz_isize
    1 B ├╴nz_u8
    2 B ├╴nz_u16
    4 B ├╴nz_u32
    8 B ├╴nz_u64
   16 B ├╴nz_u128
    8 B ├╴nz_usize
    0 B ├╴phantom_pinned
    0 B ├╴phantom_data
   29 B ├╴string
   16 B ├╴reference
    8 B ├╴mut_reference
    8 B ├╴opt_some
   24 B ├╴opt_none
   16 B ├╴boxed
   44 B ├╴vec
   76 B ├╴vec_str
   10 B ├╴array
   52 B ├╴array_str
   28 B ├╴slice
   42 B ├╴slice_str
   38 B ├╴tuple2
   43 B ├╴tuple3
   43 B ├╴tuple4
   43 B ├╴tuple5
   16 B ├╴range
    8 B ├╴range_from
   24 B ├╴range_inclusive
    8 B ├╴range_to
    8 B ├╴range_to_inclusive
    4 B ├╴cell
   16 B ├╴ref_cell
    4 B ├╴unsafe_cell
   35 B ├╴once_cell
   16 B ├╴mutex
   46 B ├╴rw_lock
   76 B ├╴hash_set
  157 B ├╴hash_set_str
  192 B ├╴hash_map
   92 B ├╴hash_map_copy
   84 B ├╴btree_set
  305 B ├╴btree_set_str
  352 B ├╴btree_map
  128 B ├╴btree_map_copy
   36 B ├╴vec_deque
   32 B ├╴binary_heap
   72 B ├╴linked_list
    0 B ├╴build_hasher [10B]
   16 B ├╴random_state
   33 B ├╴path_buf
   16 B ├╴path
   33 B ├╴os_string
   16 B ├╴os_str
    8 B ├╴fn_ptr0
    8 B ├╴fn_ptr1
    8 B ├╴fn_ptr2
    8 B ├╴fn_ptr3
    8 B ├╴fn_ptr4
   16 B ├╴layout
    8 B ├╴non_null
 8264 B ├╴buf_reader
 8256 B ├╴buf_writer
   36 B ├╴cursor
    8 B ├╴arc
    8 B ├╴rc
   92 B ├╴vec_deque_nested
   84 B ├╴binary_heap_nested
  116 B ├╴linked_list_nested
   16 B ├╴mutex_guard
   16 B ├╴rw_lock_read_guard
   16 B ├╴rw_lock_write_guard
   48 B ├╴hash_set_empty
  696 B ├╴hash_set_100
   48 B ├╴hash_map_empty
 1208 B ├╴hash_map_cc_100
 4470 B ├╴hash_map_cn_100
 4470 B ├╴hash_map_nc_100
 6708 B ├╴hash_map_nn_100
   24 B ├╴btree_set_empty
 1404 B ├╴btree_set_100
   24 B ├╴btree_map_empty
 2184 B ├╴btree_map_cc_100
 6406 B ├╴btree_map_cn_100
 6346 B ├╴btree_map_nc_100
10484 B ├╴btree_map_nn_100
   72 B ╰╴default_hasher
